# pysprint-cli

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
.cargo/: config
.github/workflows/: ci.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
example/: a.py  a.trt  almsa_pstemp.py  b.py  eval.yaml  ex.yaml  ifg.trt  ifg.trt_pstemp.py  test_pstemp.py
src/: app.rs  audit.rs  codegen.rs  deserialize.rs  io.rs  lib.rs  main.rs  parser.rs  python.rs  statistics.rs  utils.rs  watch.rs
src/templates/: boilerplate.py_t
