[package]
name = "pysprint-cli"
version = "0.1.0" #"0.1.0-alpha.0" 
license = "MIT OR Apache-2.0"
description = "A CLI tool for the Python package PySprint"
readme = "README.md"
authors = ["Leeh Peter <leeh123peter@gmail.com>"]
edition = "2018"
keywords = ["cli", "python"]
homepage = "https://github.com/Ptrskay3/pysprint-cli"
repository = "https://github.com/Ptrskay3/pysprint-cli"
categories = ["command-line-utilities"]

[[bin]]
name = "psc"
path = "src/main.rs"

[dependencies]
clap = {version = "2.33.3", features = ["color"]}
notify = "4.0.12"
serde_yaml = "0.8"
tempfile = "3.2.0"
tera = "1.7.0"
lazy_static = "1.4"
ctrlc = "3.1"
termcolor = "1.1.2"
wildmatch = "2.0.0"
indicatif = "0.15.0"
widestring = "0.4.3"
itertools = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
which = "4.1.0"

[dependencies.pyo3]
version = "0.13.2"
